# simple-expectations

./: .gitignore  README.md  docker-compose.yml  future_plan.md  main.py  pyproject.toml  pyspark_out.txt  pyspark_out3.txt  run_tests.sh  test_ibis_agg.py  test_ibis_dedup.py
src/dqe/: __init__.py  cli.py
src/dqe/core/: context.py  expectation.py  exporter.py  models.py  profiler.py  reporter.py  suite.py  validator.py
src/dqe/expectations/: __init__.py  column_aggregate.py  column_map.py  column_pair_map.py  column_structure.py  cross_table.py  custom.py  table_structure.py
src/dqe/integrations/: __init__.py  airflow.py  dagster.py  prefect.py
src/simple_expectations/: __init__.py  cli.py
src/simple_expectations/core/: context.py  expectation.py  models.py  reporter.py  suite.py  validator.py
src/simple_expectations/expectations/: __init__.py  column_aggregate.py  column_map.py  column_pair_map.py  column_structure.py  table_structure.py
tests/: check_ibis.py  conftest.py  my_test_data.db  output.txt  populate_db.py  pyspark_out.txt  test_backends.py  test_cli.yaml  test_cross_table.py  test_custom_expectations.py  test_duckdb.py  test_enhancements.py  test_expectations_unit.py  test_exporters.py  test_integrations.py  test_output.txt  test_profiler.py  test_yaml.py  test_yaml_output.txt  wait_for_docker.sh
