[project]
name = "dqe"
version = "0.1.0"
description = "A great-expectations inspired data validation library entirely powered by ibis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibis-framework",
    "pydantic",
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "duckdb",
    "polars",
    "pyspark"
]

[project.scripts]
se = "dqe.cli:main"
dqe = "dqe.cli:main"

[dependency-groups]
dev = [
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyarrow-hotfix>=0.7",
]
